src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-279.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units lrud=f:\")"
---
INVALID:
  items:
    - loc: "#units lrud=f:"
      locs:
        directive: "#units"
      options:
        - loc: "lrud=f:"
          locs:
            option: lrud
            style: f
          option: Lrud
          style: FromStationPerpendicular
      type: UnitsDirective
issues:
  - code: EMISSINGLRUDORDER
    loc: ""
    message: Missing LRUD order
    severity: Error
