src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-28.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units m\")"
---
items:
  - loc: "#units m"
    locs:
      directive: "#units"
    options:
      - loc: m
        option: DistanceUnit
        unit: Meters
    type: UnitsDirective
