src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-287.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units lrud=t:ludr#blah\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units lrud=t:ludr#blah"
        locs:
          directive: "#units"
        options:
          - loc: "lrud=t:ludr"
            locs:
              option: lrud
              order: ludr
              style: t
            option: Lrud
            order:
              - Left
              - Up
              - Down
              - Right
            style: ToStationPerpendicular
          - INVALID:
              loc: "#blah"
              option: Unknown
              value: "#blah"
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EINVALIDOPTION
    loc: "#blah"
    message: "Invalid #UNITS option"
    severity: Error
