src/srv/snapshots/walls_rust__srv__parser__tests__snapshots-289.snap
---
source: src/srv/parser_test.rs
expression: "&parse(\"#units typeab=\")"
---
INVALID:
  items:
    - INVALID:
        loc: "#units typeab="
        locs:
          directive: "#units"
        options:
          - INVALID:
              loc: typeab
              locs:
                option: typeab
              option: BacksightAzimuthType
            issues:
              - 0
        type: UnitsDirective
issues:
  - code: EMISSINGVALUE
    loc: ""
    message: Missing backsight options
    severity: Error
